--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # API Configuration
-VITE_API_URL=https://vin2grow-latest-2.onrender.com
+VITE_API_URL=https://vin2grow.in/api
 
 # Razorpay Configuration
 VITE_RAZORPAY_KEY_ID=your_razorpay_key_id
